--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,15 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400&display=swap');
 
-*{
+/* *{
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
-}
+} */
 
 /* font-family: 'Playfair Display',
 serif;
 font-family: 'Poppins',
 sans-serif; */
+
+html{
+  max-width: 1520px;
+}
 
 .navbar{
   font-family: 'Poppins',
