--- a/client/src/pages/Homepage.css
+++ b/client/src/pages/Homepage.css
@@ -1,23 +1,108 @@
 .carousel-control-prev-icon,
-    .carousel-control-next-icon {
-      /* Replace "red" with your desired arrow color */
-      background-color: black;
-    }
+.carousel-control-next-icon {
+  /* Replace "red" with your desired arrow color */
+  background-color: black;
+}
 
-    /* Optionally, you can change the arrow size and other properties */
-    .carousel-control-prev-icon {
-      background-size: 30px 30px;
-      width: 45px;
-      height: 45px;
-    }
+/* Optionally, you can change the arrow size and other properties */
+.carousel-control-prev-icon {
+  background-size: 30px 30px;
+  width: 45px;
+  height: 45px;
+}
 
-    .carousel-control-next-icon {
-      background-size: 30px 30px;
-      width: 45px;
-      height: 45px;
-    }
+.carousel-control-next-icon {
+  background-size: 30px 30px;
+  width: 45px;
+  height: 45px;
+}
 
-    .custom-hr {
-        /* border: 0; Remove the default border */
-        border-top: 2px solid black; /* Add a 2px solid black top border */
-      }
+.custom-hr {
+  /* border: 0; Remove the default border */
+  border-top: 2px solid black; /* Add a 2px solid black top border */
+}
+
+#product1 {
+  text-align: center;
+}
+
+#product1 .pro {
+  width: 19%;
+  min-width: 250px;
+  padding: 10px 12px;
+  border: 1px solid #cce7d0;
+  border-radius: 25px;
+  cursor: pointer;
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
+  margin: 15px 0;
+  transition: 0.2s ease;
+  position: relative;
+}
+
+#product1 .pro:hover {
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
+  transform: scale(1.05);
+}
+
+#product1 .pro img {
+  width: 100%;
+  border-radius: 20px;
+}
+
+#product1 .pro .desc {
+  text-align: start;
+  padding: 10px 0;
+}
+
+
+#product1 .pro .desc h5 {
+  padding-top: 5px;
+  color: #1a1a1a;
+  font-size: 15px;
+}
+
+#product1 .pro .desc i {
+  font-size: 12px;
+  color: rgb(243, 181, 25);
+}
+
+#product1 .pro .desc h4 {
+  padding-top: 7px;
+  font-size: 15px;
+  font-weight: 700;
+  color: rgb(13,110,253);
+}
+
+#product1 .pro .desc span {
+  color: #606063;
+  font-size: 12px;
+  right: 0;
+  bottom: 20;
+}
+
+#product1 .pro .buttons{
+  display: flex;
+  justify-content: space-between;
+}
+
+#product1 .pro .cart {
+  /* width: 40px;
+ height: 40px; */
+ line-height: 40px;
+ border-radius: 10px;
+ background-color: rgb(13,110,253);
+ font-weight: 500;
+ color: white;
+ border: 1px solid #cce7d0;
+ padding: 0 8px;
+ margin: 8px 0;
+}
+
+
+
+#product1 .p-cont {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 20px;
+  flex-wrap: wrap;
+}
